# gpu_chimp

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs  temp.out
api/: Cargo.toml
api/src/: compressor32.rs  compressor64.rs  decompressor32.rs  decompressor64.rs  factory.rs  lib.rs
compress_utils/: Cargo.toml
compress_utils/src/: context.rs  cpu_compress.rs  lib.rs  types.rs
compressapi/: Cargo.toml
compressapi/src/: main.rs
src/: compute_s.wgsl  cpu_compress.rs  lib.rs  main.rs  s_builder.wgsl  types.rs  utils.rs
src/shaders/: chimp_compress.wgsl  compute_s.wgsl  propagate_s.wgsl
wgpu_compress_32/: Cargo.toml
wgpu_compress_32/src/: lib.rs
wgpu_compress_32/src/shaders/: chimp_compress.wgsl  compute_s.wgsl
wgpu_compress_32_batched/: .env  1.txt  2.txt  Cargo.toml
wgpu_compress_32_batched/src/: calculate_indexes.rs  compute_s_shader.rs  decompressor.rs  final_compress.rs  finalize.rs  lib.rs
wgpu_compress_32_batched/src/cpu/: decompressor.rs  finalize.rs  mod.rs
wgpu_compress_32_batched/src/shaders/: calculate_final_sizes.wgsl  chimp_compress.wgsl  chimp_finalize_compress.wgsl  compute_s.wgsl  decompress.wgsl  initialize_first_per_buffer.wgsl
wgpu_compress_32_n_batched/: Cargo.toml
wgpu_compress_32_n_batched/src/: calculate_indexes.rs  chimpn.rs  compute_s_shader.rs  decompressor.rs  final_compress.rs  finalize.rs  lib.rs  previous_indexes.rs
wgpu_compress_32_n_batched/src/cpu/: compress.rs  compute_s.rs  decompressor.rs  mod.rs  previous_indexes.rs
wgpu_compress_32_n_batched/src/shaders/: calculate_previous_efficient_index.wgsl  calculate_previous_efficient_index_by_trailling.wgsl  chimp_compress.wgsl  chimp_finalize_compress.wgsl  compute_s.wgsl  decompress.wgsl  initialize_first_per_buffer.wgsl
wgpu_compress_64_batched/: Cargo.toml
wgpu_compress_64_batched/src/: actual64.rs  calculate_indexes.rs  compute_s_shader.rs  decompressor.rs  final_compress.rs  finalize.rs  lib.rs
wgpu_compress_64_batched/src/cpu/: calculate_indexes.rs  chimp_compress.rs  compute_s.rs  decompressor.rs  finalize.rs  mod.rs  utils_64.rs
wgpu_compress_64_batched/src/shaders/: 64_utils.wgsl  calculate_final_sizes.wgsl  chimp_compress.wgsl  chimp_finalize_compress.wgsl  compute_s.glsl  compute_s.wgsl  decompress.wgsl  initialize_first_per_buffer.wgsl
wgpu_compress_64_n_batched/: Cargo.toml
wgpu_compress_64_n_batched/src/: calculate_indexes.rs  chimpn.rs  compute_s_shader.rs  decompressor.rs  final_compress.rs  finalize.rs  lib.rs  previous_indexes.rs
wgpu_compress_64_n_batched/src/cpu/: compress.rs  compute_s.rs  decompressor.rs  previous_indexes.rs
wgpu_compress_64_n_batched/src/shaders/: 64_utils.wgsl  calculate_final_sizes.wgsl  calculate_previous_efficient_index.wgsl  chimp_compress.wgsl  chimp_finalize_compress.wgsl  compute_s.wgsl  decompress.wgsl
