[package]
name = "compress"
version = "0.1.0"
edition = "2021"

[lib]
name = "compress"
path = "src/lib.rs"

[[bin]]
name = "compresapi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
log = "0.4.22"
tokio = {version=  "1.40.0",features=["full"]}
rand = "0.8.5"
env_logger = "0.11.5"
bytemuck = { version = "1.18.0" , features = ["derive"]}
flume = "0.11.0"
pollster = "0.3.0"
wgpu = { version="22.1.0", default-features = false, features = [
   "wgsl",
   "dx12",
   "metal",
] }
bit-vec = "0.8.0"
async-trait = "0.1.83"