[workspace]
members = [
    "compress_utils",
    "wgpu_compress_32",
    "wgpu_compress_32_batched",
    "compressapi"
]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "23.0.0", default-features = false, features = [
    "wgsl",
    "dx12",
    "replay"
] }
wgpu-types = "23.0.0"
async-trait = "0.1.83"
bit-vec = "0.8.0"
anyhow = "1.0.93"
itertools = "0.13.0"
log = "0.4.22"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log"] }
tracing = "0.1.41"
thiserror = "2.0.9"