[package]
name = "compressapi"
version = "0.1.0"
edition = "2021"

[dependencies]
compress_utils = { path = "../compress_utils" }
wgpu_compress_32 = { path = "../wgpu_compress_32" }

anyhow = { workspace = true }
itertools = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
pollster = "0.4.0"
log = { workspace = true }
bit-vec = { workspace = true }