[package]
name = "wgpu_compress_32_batched"
version = "0.1.0"
edition = "2021"

[dependencies]
compress_utils = { path = "../compress_utils" }
wgpu_compress_32 = { path = "../wgpu_compress_32" }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.19.0", features = ["derive"] }
wgpu = { workspace = true }
wgpu-types = { workspace = true }
bit-vec = { workspace = true }
async-trait = { workspace = true }
pollster = "0.4.0"
tracing-subscriber = { workspace = true }
tracing = "0.1.41"