[package]
name = "wgpu_compress_32_batched"
version = "0.1.0"
edition = "2021"

[dependencies]
compress_utils = { path = "../compress_utils" }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.23.1", features = ["derive"] }
wgpu = { version = "26.0.0" }
wgpu-types = { version = "26.0.0" }
bit-vec = { workspace = true }
async-trait = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
csv = { version = "1.4.0" }
