[package]
name = "wgpu_compress_64_n_batched"
version = "0.1.0"
edition = "2024"

[dependencies]
compress_utils = { path = "../compress_utils" }
wgpu_compress_32_batched = { path = "../wgpu_compress_32_batched" }
wgpu_compress_64_batched = { path = "../wgpu_compress_64_batched" }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.23.1", features = ["derive"] }
wgpu = { workspace = true }
wgpu-types = { workspace = true }
bit-vec = { workspace = true }
async-trait = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
csv = "1.4.0"